--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
-    "phosphor-svelte": "^1.2.1"
+    "@sveltestack/svelte-query": "^1.6.0",
+    "@types/lodash.chunk": "^4.2.7",
+    "axios": "^1.1.2",
+    "lodash.chunk": "^4.2.0",
+    "phosphor-svelte": "^1.2.1",
+    "svelte-forms": "^2.3.1"
   }
 }
