feat: :fire: adcionado graphql e auth0

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_API_BASE_URL=http://localhost:3030
+VITE_API_BASE_URL=https://api-sa-east-1.hygraph.com/v2/cl95z42796ma201t6ga5f8vfu/master
+VITE_AUTH0_CLIENT_ID=V9Z1j4ZilCCHdhoQpP9orcd8cBRP1WWq
+VITE_AUTH0_DOMAIN=dev-ispt3xiv.us.auth0.com
