--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.22.5",
     "@sveltestack/svelte-query": "^1.6.0",
     "@types/lodash.chunk": "^4.2.7",
-    "axios": "^1.1.2",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
     "lodash.chunk": "^4.2.0",
+    "node-sass": "^7.0.3",
     "phosphor-svelte": "^1.2.1",
-    "svelte-forms": "^2.3.1"
+    "svelte-forms": "^2.3.1",
+    "svelte-router-spa": "^6.0.3"
   }
 }
