--- a/package.json
+++ b/package.json
@@ -1,34 +1,48 @@
 {
-  "name": "svt-money",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
-  },
-  "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.2",
-    "@tsconfig/svelte": "^3.0.0",
-    "svelte": "^3.49.0",
-    "svelte-check": "^2.8.1",
-    "svelte-preprocess": "^4.10.7",
-    "tslib": "^2.4.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0"
-  },
-  "dependencies": {
-    "@auth0/auth0-spa-js": "^1.22.5",
-    "@sveltestack/svelte-query": "^1.6.0",
-    "@types/lodash.chunk": "^4.2.7",
-    "graphql": "^16.6.0",
-    "graphql-request": "^5.0.0",
-    "lodash.chunk": "^4.2.0",
-    "node-sass": "^7.0.3",
-    "phosphor-svelte": "^1.2.1",
-    "svelte-forms": "^2.3.1",
-    "svelte-router-spa": "^6.0.3"
-  }
+    "name": "svt-money",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "check": "svelte-check --tsconfig ./tsconfig.json",
+        "format": "prettier --write ./src/**/*.{js,svelte,html,ts}",
+        "lint": "eslint './src/**/*.{js,ts,svelte}'",
+        "lint:fix": "eslint --fix './src/**/*.{js,ts,svelte}'",
+        "prelint": "npm run format"
+    },
+    "devDependencies": {
+        "@miragejs/graphql": "^0.1.13",
+        "@sveltejs/vite-plugin-svelte": "^1.0.2",
+        "@tsconfig/svelte": "^3.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.40.0",
+        "@typescript-eslint/parser": "^5.40.0",
+        "eslint": "^8.25.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-svelte3": "^4.0.0",
+        "prettier": "^2.7.1",
+        "prettier-plugin-svelte": "^2.8.0",
+        "svelte": "^3.49.0",
+        "svelte-check": "^2.8.1",
+        "svelte-preprocess": "^4.10.7",
+        "tslib": "^2.4.0",
+        "typescript": "^4.6.4",
+        "vite": "^3.1.0"
+    },
+    "dependencies": {
+        "@auth0/auth0-spa-js": "^1.22.5",
+        "@sveltestack/svelte-query": "^1.6.0",
+        "@types/lodash.chunk": "^4.2.7",
+        "axios": "^1.1.2",
+        "graphql": "^16.6.0",
+        "graphql-request": "^5.0.0",
+        "lodash.chunk": "^4.2.0",
+        "miragejs": "^0.1.45",
+        "node-sass": "^7.0.3",
+        "phosphor-svelte": "^1.2.1",
+        "svelte-forms": "^2.3.1",
+        "svelte-router-spa": "^6.0.3"
+    }
 }
